# fAIr

./: Readme.md  docker-compose-cpu.yml  docker-compose.yml
.github/workflows/: backend_build.yml  frontend_build.yml  frontend_build_push.yml
backend/: .pre-commit-config.yaml  README.md  api-entrypoint.sh  api-requirements.txt  docker-compose-cpu.yml  docker-compose.yml  docker_sample_env  pyproject.toml  requirements.txt
backend/aiproject/: celery.py  settings.py  urls.py
backend/core/: admin.py  apps.py  models.py  serializers.py  tasks.py  tests.py  urls.py  utils.py  views.py
backend/core/management/commands/: makesuper.py  rename.py  runserver_with_q.py
backend/login/: models.py  tests.py  tokens.py  urls.py  views.py
backend/tests/: factories.py  test_runners.py  test_views.py
docs/: Docker-installation.md
frontend/: .env.sample  Dockerfile.frontend  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  test-setup.ts  tsconfig.app.json  vite.config.mts
frontend/src/: main.tsx
frontend/src/app/: index.tsx  router.tsx
frontend/src/app/providers/: auth-provider.tsx  models-provider.tsx  tour-provider.tsx
frontend/src/app/routes/: authenticate.tsx  landing.tsx  learn.tsx  login.tsx  not-found.tsx  protected-route.tsx  resources.tsx  (+2 more)
frontend/src/config/: env.ts  index.ts
frontend/src/constants/: general.ts  index.ts  routes.ts  site-tour.ts  toast-notifications.ts
frontend/src/enums/: common.ts  start-mapping.ts  user-profile.ts
frontend/src/hooks/: use-click-outside.ts  use-clipboard.ts  use-dropdown-menu.ts  use-history.ts  use-layer-order.ts  use-login.ts  use-map-instance.ts  use-map-layer.ts  use-screen-size.ts  use-storage.ts  use-tileservice.ts  use-tooltip-visibility.ts
frontend/src/layouts/: model-forms-layout.tsx  root-layout.tsx  user-profile-layout.tsx
frontend/src/services/: api-client.ts  api-routes.ts  auth.ts  react-query.ts
frontend/src/store/: map-store.ts  model-prediction-store.ts
frontend/src/styles/: hot-font-face.css  hot-sl.css  index.css
frontend/src/types/: api.ts  common.ts  ui-contents.ts
frontend/src/utils/: date-utils.ts  general-utils.ts  regex-utils.ts  storage.ts  string-utils.ts
infra/systemd/: Readme.md  django-q.service  django.service  workers.service
(+243 files in other folders)
