[project]
name = "fAIr"
version = "1.0.1"
description = "AI Assisted Mapping"
authors = [
    {name = "HOTOSM", email = "sysadmin@hotosm.org"},
]

requires-python = ">=3.10"
readme = "README.md"
license = {text = "AGPL-3.0 license"}
dependencies = ["django==4.1.4", "psycopg2", "djangorestframework==3.14.0", "djangorestframework-gis==1.0", "dj-database-url==1.2.0", "django-leaflet==0.28.3", "drf-yasg==1.21.4", "django-environ==0.9.0", "django-filter==22.1", "django-cors-headers==3.13.0", "osm-login-python==0.0.2", "celery==5.2.7", "redis>=3.5.3", "django-celery-results==2.4.0", "flower==1.2.0", "validators==0.20.0", "gpxpy==1.5.0", "geojson2osm==0.0.1", "osmconflator==0.0.11", "orthogonalizer==0.0.4", "rasterio==1.3.8", "numpy<2.0.0", "mercantile==1.2.1", "tqdm==4.67.0", "boto3==1.35.76", "django-q==1.3.9", "hot-fair-utilities==2.0.10", "tflite-runtime==2.14.0", "tippecanoe==2.45.0", "fairpredictor==0.0.37", "opencv-python-headless==4.10.0.84", "onnxruntime>=1.0.0"]

[project.optional-dependencies]
workers = ["django==4.1.4", "psycopg2", "djangorestframework==3.14.0", "djangorestframework-gis==1.0", "dj-database-url==1.2.0", "django-leaflet==0.28.3", "drf-yasg==1.21.4", "django-environ==0.9.0", "django-filter==22.1", "django-cors-headers==3.13.0", "osm-login-python==0.0.2", "celery==5.2.7", "redis>=3.5.3", "django-celery-results==2.4.0", "flower==1.2.0", "validators==0.20.0", "gpxpy==1.5.0", "geojson2osm==0.0.1", "osmconflator==0.0.11", "orthogonalizer==0.0.4", "rasterio==1.3.8", "numpy<2.0.0", "mercantile==1.2.1", "tqdm==4.67.0", "boto3==1.35.76", "django-q==1.3.9", "hot-fair-utilities==2.0.10", "tflite-runtime==2.14.0", "tippecanoe==2.45.0", "fairpredictor==0.0.37", "opencv-python-headless==4.10.0.84", "onnxruntime>=1.0.0"]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "commitizen>=3.27.0",
    "ruff>=0.4.9",
    "coverage>=7.6.0",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "\"v$version\""
version_scheme = "semver2"
version = "1.0.1"
update_changelog_on_bump = true

[tool.coverage.run]
omit = [
    "/usr/*"
]
